--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,15 +6,20 @@ main {
   border: 1px solid red;
   margin: 100px auto;
   position: relative;
+  overflow: hidden;
 
   .panel {
-    width: 2000px;
-    height: 200px;
+    //anime에서 margin은 퍼센트 모션 처리 불가하기 때문에 , absolute의 left로 배치
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 300%; //부모요소 100% * 패널갯수
+    height: 100%;
     display: flex;
 
     li {
-      width: 400px;
-      height: 200px;
+      width: 33.3333%; //자식요소 100% / 패널갯수
+      height: 100%;
       display: flex;
       justify-content: center;
       align-items: center;
