패널과 버튼의 갯수에 따라 너비, 높이 스타일링 js가 동적으로 처리

--- a/css/style.css
+++ b/css/style.css
@@ -22,13 +22,16 @@ main {
   position: relative;
 }
 main .panel {
-  width: 2000px;
-  height: 200px;
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  width: 300%;
+  height: 100%;
   display: flex;
 }
 main .panel li {
-  width: 400px;
-  height: 200px;
+  width: 33.3333%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
