--- a/css/style.css
+++ b/css/style.css
@@ -15,23 +15,18 @@ a {
 }
 
 main {
-  width: 400px;
-  height: 200px;
-  border: 1px solid red;
-  margin: 100px auto;
+  width: 100%;
+  height: 100vh;
   position: relative;
+  overflow: hidden;
 }
 main .panel {
   position: absolute;
   top: 0%;
   left: 0%;
-  width: 300%;
-  height: 100%;
   display: flex;
 }
 main .panel li {
-  width: 33.3333%;
-  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
