--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 ul,
@@ -27,36 +28,49 @@ main .panel {
   display: flex;
 }
 main .panel li {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 50px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  background-attachment: fixed;
 }
 main .panel li:nth-of-type(1) {
-  background: aqua;
+  background-image: url(../img/pic00.jpg);
 }
 main .panel li:nth-of-type(2) {
-  background: lightgreen;
+  background-image: url(../img/pic11.jpg);
 }
 main .panel li:nth-of-type(3) {
-  background: hotpink;
+  background-image: url(../img/pic22.jpg);
 }
 main .panel li:nth-of-type(4) {
-  background: orange;
+  background-image: url(../img/pic33.jpg);
 }
 main .panel li:nth-of-type(5) {
-  background: violet;
+  background-image: url(../img/pic44.jpg);
 }
 main .btns {
   width: 100%;
+  padding: 0px 10%;
   position: absolute;
-  bottom: 20px;
+  bottom: 5vh;
   left: 0px;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
 main .btns li {
   cursor: pointer;
+  width: 18%;
+  height: 50px;
+  border: 1px solid #111;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 14px;
+  border-radius: 25px;
+}
+main .btns li.on {
+  color: white;
+  background: rgba(0, 0, 0, 0.5);
 }
 
 /*# sourceMappingURL=style.css.map */
